--- a/style.css
+++ b/style.css
@@ -14,9 +14,27 @@
 }
 
 .list-group {
-  display: none;
+  visibility: hidden;
+}
+
+.black-bg {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  padding: 30px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 1s;
+}
+.white-bg {
+  background: white;
+  border-radius: 5px;
+  padding: 30px;
 }
 
 .show {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
