--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  scroll-behavior: auto;
+}
+
 .alert-box {
   background-color: skyblue;
   padding: 20px;
@@ -46,4 +50,39 @@
 .main-bg {
   padding: 100px 20px;
   background-color: lightgray;
+}
+
+.slide-container {
+  width: 300vw;
+  transition: all 1s;
+}
+
+.slide-box {
+  width: 100vw;
+  float: left;
+}
+
+.slide-box img {
+  width: 100%;
+}
+
+button[class*="slide-"] {
+  border: 1px solid pink;
+  background-color: transparent;
+}
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  z-index: 5;
+}
+
+.navbar-brand {
+  font-size: 30px;
+  transition: all 1s;
+}
+
+.navbar-scroll {
+  font-size: 20px;
 }
