--- a/style.css
+++ b/style.css
@@ -86,3 +86,21 @@ button[class*="slide-"] {
 .navbar-scroll {
   font-size: 20px;
 }
+
+.grey {
+  background-color: lightgray;
+  height: 2000px;
+  margin-top: 500px;
+}
+
+.image {
+  float: right;
+  width: 400px;
+  position: sticky;
+  top: 100px;
+}
+
+.text {
+  float: left;
+  width: 300px;
+}
